@@ -77,6 +77,7 @@
      * Reset print stats after a print ends
      * Fix print fail from a unchecked print buffer underflow
      * Report mesh bed leveling data
+     * Use the print mode to report the right print stats row to connect
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
